--- a/panel.html
+++ b/panel.html
@@ -1,14 +1,86 @@
+<div id="split_view_titlebar" style="border-bottom: 2px solid #323232;">
+	<a href="#" class="icon_actions" onclick="actionTaken('close')" id="action_close"><img src="" id="icon_close"
+			style="width: 16px; height: 16px;" alt="close"/></a> <a href="#" class="icon_actions"
+		onclick="actionTaken('maximize')" id="action_maximize"><img src="" id="icon_maximize"
+		style="width: 16px; height: 16px;" alt="maximize"/></a> <a href="#" class="icon_actions"
+		onclick="actionTaken('minimize')" id="action_minimize"><img src="" id="icon_minimize"
+		style="width: 16px; height: 16px;" alt="minimize"/></a>
+
+	<div style="clear: both"></div>
+</div>
 <div id="disqus_thread"></div>
+
+<style type="text/css">
+	.icon_actions {
+		display: block;
+		float: right;
+		margin: 1px;
+	}
+</style>
+
 <script type="text/javascript">
+	/* setup the icons */
+	var closeIcon = chrome.extension.getURL("/images/close.png");
+	var maxIcon = chrome.extension.getURL("/images/maximise.png");
+	var minIcon = chrome.extension.getURL("/images/minimise.png");
+
+	var closeIconImage = document.getElementById("icon_close");
+	closeIconImage.setAttribute('src', closeIcon);
+	var maxIconImage = document.getElementById("icon_maximize");
+	maxIconImage.setAttribute('src', maxIcon);
+	var minIconImage = document.getElementById("icon_minimize");
+	minIconImage.setAttribute('src', minIcon);
+
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	var disqus_shortname = 'answersingenesis'; // required: replace example with your forum shortname
+	var disqus_identifier = str_replace('http://www.answersingenesis.org', '', document.URL);
+	var disqus_title = str_replace('http://www.answersingenesis.org', '', document.URL);
+	var disqus_url = document.URL;
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
-	(function() {
-		var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	(function () {
+		var dsq = document.createElement('script');
+		dsq.type = 'text/javascript';
+		dsq.async = true;
 		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
+
+	function str_replace(search, replace, subject, count) {
+		var i = 0,
+				j = 0,
+				temp = '',
+				repl = '',
+				sl = 0,
+				fl = 0,
+				f = [].concat(search),
+				r = [].concat(replace),
+				s = subject,
+				ra = Object.prototype.toString.call(r) === '[object Array]',
+				sa = Object.prototype.toString.call(s) === '[object Array]';
+		s = [].concat(s);
+		if (count) {
+			this.window[count] = 0;
+		}
+
+		for (i = 0, sl = s.length; i < sl; i++) {
+			if (s[i] === '') {
+				continue;
+			}
+			for (j = 0, fl = f.length; j < fl; j++) {
+				temp = s[i] + '';
+				repl = ra ? (r[j] !== undefined ? r[j] : '') : r[0];
+				s[i] = (temp)
+						.split(f[j])
+						.join(repl);
+				if (count && s[i] !== temp) {
+					this.window[count] += (temp.length - s[i].length) / f[j].length;
+				}
+			}
+		}
+		return sa ? s : s[0];
+	}
 </script>
-<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+</noscript><a href="http://disqus.com" class="dsq-brlink">comments powered by <span
+		class="logo-disqus">Disqus</span></a>
