--- a/panel.html
+++ b/panel.html
@@ -1,10 +1,13 @@
 <div id="split_view_titlebar" style="border-bottom: 2px solid #323232;">
-	<a href="#" class="icon_actions" onclick="actionTaken('close')" id="action_close"><img src="" id="icon_close"
-			style="width: 16px; height: 16px;" alt="close"/></a> <a href="#" class="icon_actions"
-		onclick="actionTaken('maximize')" id="action_maximize"><img src="" id="icon_maximize"
-		style="width: 16px; height: 16px;" alt="maximize"/></a> <a href="#" class="icon_actions"
-		onclick="actionTaken('minimize')" id="action_minimize"><img src="" id="icon_minimize"
-		style="width: 16px; height: 16px;" alt="minimize"/></a>
+	<a href="#" class="icon_actions action_click" id="action_close">
+		<img src="" id="icon_close" style="width: 16px; height: 16px;" alt="close"/>
+	</a>
+	<a href="#" class="icon_actions action_click" id="action_maximize">
+		<img src="" id="icon_maximize" style="width: 16px; height: 16px;" alt="maximize"/>
+	</a>
+	<a href="#" class="icon_actions action_click" id="action_minimize">
+		<img src="" id="icon_minimize" style="width: 16px; height: 16px;" alt="minimize"/>
+	</a>
 
 	<div style="clear: both"></div>
 </div>
@@ -12,13 +15,50 @@
 
 <style type="text/css">
 	.icon_actions {
-		display: block;
-		float: right;
-		margin: 1px;
+		display : block;
+		float   : right;
+		margin  : 1px;
 	}
 </style>
 
 <script type="text/javascript">
+
+	$("#split_view_content").resizable({ handles: "w", resize: function (event, ui) {
+		ui.element.css({left: 'none'});
+	}, start: function (event, ui) {
+		$('iframe').css('pointer-events', 'none');
+	}, stop: function (event, ui) {
+		$('iframe').css('pointer-events', 'auto');
+	}});
+
+	$('.action_click').on("click", function () {
+		actionTaken($(this).attr('id'));
+	});
+
+	function actionTaken(type) {
+		var splitViewContent = document.getElementById('split_view_content');
+
+		if (type === 'action_minimize') {
+			splitViewContent.style.height = "20px";
+			splitViewContent.style.width = "54px";
+		}
+		if (type === 'action_maximize') {
+			if (splitViewContent.style.height === '99%') {
+				splitViewContent.style.height = "auto";
+				splitViewContent.style.width = "99%";
+			} else {
+				splitViewContent.style.height = "99%";
+				splitViewContent.style.width = "auto";
+			}
+		}
+		if (type === 'action_close') {
+			splitViewContent.style.display = 'none';
+		}
+		if (type === 'action_options') {
+			openWindow(chrome.extension.getURL("/options.html"));
+		}
+	}
+
 	/* setup the icons */
 	var closeIcon = chrome.extension.getURL("/images/close.png");
 	var maxIcon = chrome.extension.getURL("/images/maximise.png");
