--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,11 @@
         <!-- endbuild -->
 
         <!-- build:js scripts/popup.js -->
+        <script src="scripts/jquery-1.11.0.min.js"></script>
         <script src="scripts/popup.js"></script>
         <!-- endbuild -->
     </head>
     <body>
-        test
+    <a href="#" id="show_chat">Show Chat</a>
     </body>
 </html>
