--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,12 @@
 			<a href="#" class="uk-button uk-button-primary chat_button" data-action="show_chat">Show Comments</a>
 			<a href="#" class="uk-button uk-button-primary chat_button" data-action="hide_chat">Hide Comments</a>
 		</div>
-
+		<br/>
+		<br/>
+		<div class="uk-button-group">
+			<a href="#" class="uk-button uk-button-primary chat_button" data-action="vertical_chat">Set Vertical</a>
+			<a href="#" class="uk-button uk-button-primary chat_button" data-action="horizontal_chat">Set Horizontal</a>
+		</div>
 	</div>
 	<article class="uk-article">
 		<hr class="uk-article-divider">
