--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 	<link href="styles/uikit.almost-flat.min.css" rel="stylesheet">
-
 	<script src="scripts/jquery-1.11.0.min.js"></script>
 	<script src="scripts/popup.js"></script>
 </head>
 <body>
 <div class="uk-container" style="width: 300px;">
 	<div class="uk-panel">
-		<h3 class="uk-panel-title"><i class="uk-icon-*"></i>Inside Comments</h3>
+		<h3 class="uk-panel-title"><i class="uk-icon-*"></i>Obiter Inside Comments</h3>
 		<div class="uk-button-group">
 			<a href="#" class="uk-button uk-button-primary chat_button" data-action="show_chat">Show Comments</a>
 			<a href="#" class="uk-button uk-button-primary chat_button" data-action="hide_chat">Hide Comments</a>
@@ -17,8 +16,8 @@
 		<br/>
 		<br/>
 		<div class="uk-button-group">
-			<a href="#" class="uk-button uk-button-primary chat_button" data-action="vertical_chat">Set Vertical</a>
-			<a href="#" class="uk-button uk-button-primary chat_button" data-action="horizontal_chat">Set Horizontal</a>
+			<a href="#" class="uk-button uk-button-primary chat_button" data-action="vertical_chat">Set Horizontal</a>
+			<a href="#" class="uk-button uk-button-primary chat_button" data-action="horizontal_chat">Set Vertical</a>
 		</div>
 	</div>
 	<article class="uk-article">
