--- a/panel.html
+++ b/panel.html
@@ -96,7 +96,7 @@
 	//minIconImage.setAttribute('src', minIcon);
 
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	var disqus_shortname = 'answersingenesis'; // required: replace example with your forum shortname
+	var disqus_shortname = 'dictum'; // required: replace example with your forum shortname
 	var disqus_identifier = str_replace('http://www.answersingenesis.org', '', document.URL);
 	var disqus_title = str_replace('http://www.answersingenesis.org', '', document.URL);
 	var disqus_url = document.URL;
