--- a/popup.html
+++ b/popup.html
@@ -8,22 +8,23 @@
 <body>
 <div class="uk-container" style="width: 300px;">
 	<div class="uk-panel">
-		<h3 class="uk-panel-title"><i class="uk-icon-*"></i>Obiter Inside Comments</h3>
-		<div class="uk-button-group">
-			<a href="#" class="uk-button uk-button-primary chat_button" data-action="show_chat">Show Comments</a>
-			<a href="#" class="uk-button uk-button-primary chat_button" data-action="hide_chat">Hide Comments</a>
-		</div>
+		<h3 style="margin: 10px;text-align: center;">Dictum Inside Comments</h3>
+		<a href="#" class="uk-button uk-button-primary chat_button uk-width-1-1" data-action="show_chat">Show Comments</a>
 		<br/>
 		<br/>
-		<div class="uk-button-group">
-			<a href="#" class="uk-button uk-button-primary chat_button" data-action="vertical_chat">Set Horizontal</a>
-			<a href="#" class="uk-button uk-button-primary chat_button" data-action="horizontal_chat">Set Vertical</a>
-		</div>
+		<a href="#" class="uk-button uk-button-primary chat_button uk-width-1-1" data-action="hide_chat">Hide Comments</a>
+		<br/>
+		<br/>
+		<a href="#" class="uk-button uk-button-success chat_button uk-width-1-1" data-action="vertical_chat">Set Horizontal</a>
+		<br/>
+		<br/>
+		<a href="#" class="uk-button uk-button-success chat_button uk-width-1-1" data-action="horizontal_chat">Set Vertical</a>
+		<br/>
+		<br/>
 	</div>
-	<article class="uk-article">
-		<hr class="uk-article-divider">
-		<p class="uk-article-meta"><small id="get_quotes"></small></p>
-	</article>
+	<blockquote>
+		<p><small id="get_quotes"></small></p>
+	</blockquote>
 </div>
 
 </body>
