--- a/popup.html
+++ b/popup.html
@@ -8,19 +8,7 @@
 <body>
 <div class="uk-container" style="width: 300px;">
 	<div class="uk-panel">
-		<h3 style="margin: 10px;text-align: center;">Dictum Inside Comments</h3>
-		<a href="#" class="uk-button uk-button-primary chat_button uk-width-1-1" data-action="show_chat">Show Comments</a>
-		<br/>
-		<br/>
-		<a href="#" class="uk-button uk-button-primary chat_button uk-width-1-1" data-action="hide_chat">Hide Comments</a>
-		<br/>
-		<br/>
-		<a href="#" class="uk-button uk-button-success chat_button uk-width-1-1" data-action="vertical_chat">Set Horizontal</a>
-		<br/>
-		<br/>
-		<a href="#" class="uk-button uk-button-success chat_button uk-width-1-1" data-action="horizontal_chat">Set Vertical</a>
-		<br/>
-		<br/>
+		<h3 style="margin: 10px;text-align: center;">Dictum << Inside Comments</h3>
 	</div>
 	<blockquote>
 		<p><small id="get_quotes"></small></p>
