--- a/panel.html
+++ b/panel.html
@@ -1,35 +1,10 @@
-<div id="split_view_titlebar" style="border-bottom: 2px solid #323232;">
-	<a href="#" class="icon_actions action_click" id="action_close">
-		<!--img src="" id="icon_close" style="width: 16px; height: 16px;" alt="close"/--> </a>
-	<a href="#" class="icon_actions action_click" id="action_maximize">
-		<!--img src="" id="icon_maximize" style="width: 16px; height: 16px;" alt="maximize"/--> </a>
-	<a href="#" class="icon_actions action_click" id="action_minimize">
-		<!--img src="" id="icon_minimize" style="width: 16px; height: 16px;" alt="minimize"/--> </a>
-
-	<div style="clear: both"></div>
-</div>
 <div id="disqus_thread"></div>
 
-<style type="text/css">
-	.icon_actions {
-		display: block;
-		float: right;
-		margin: 1px;
-	}
-</style>
-
 <script type="text/javascript">
+	/**
+	 * deal with the chat resizing
+	 */
 	var $split_view_content = $("#split_view_content");
-	var contentscript_minimize_chat = localStorage.getItem('contentscript_minimize_chat') && localStorage.getItem('contentscript_minimize_chat') === 'true' ? 'true' : 'false';
-	var contentscript_maximize_chat = localStorage.getItem('contentscript_maximize_chat') && localStorage.getItem('contentscript_maximize_chat') === 'true' ? 'true' : 'false';
-	var action_minimize = $('#action_minimize');
-	var action_maximize = $('#action_maximize');
-
-	if (contentscript_minimize_chat === 'true') {
-		actionTaken('action_minimize');
-	} else if (contentscript_maximize_chat === 'true') {
-		actionTaken('action_maximize');
-	}
 
 	$split_view_content.resizable({ handles: "n, w", resize: function (event, ui) {
 		if ($split_view_content.css('border-left') === '0px none rgb(0, 0, 0)') {
@@ -43,62 +18,11 @@
 		$('iframe').css('pointer-events', 'auto');
 	}});
 
-	$('.action_click').on("click", function () {
-		actionTaken($(this).attr('id'));
-	});
-
-	function actionTaken(type) {
-		var splitViewContent = document.getElementById('split_view_content');
-
-		if (type === 'action_minimize') {
-			action_minimize.hide();
-			action_maximize.show();
-			localStorage.setItem('contentscript_open_chat', 'true');
-			localStorage.setItem('contentscript_minimize_chat', 'true');
-			localStorage.setItem('contentscript_maximize_chat', 'false');
-			splitViewContent.style.height = "20px";
-			splitViewContent.style.width = "54px";
-		}
-		if (type === 'action_maximize') {
-			action_minimize.show();
-			action_maximize.hide();
-			localStorage.setItem('contentscript_open_chat', 'true');
-			localStorage.setItem('contentscript_minimize_chat', 'false');
-			localStorage.setItem('contentscript_maximize_chat', 'true');
-			if (splitViewContent.style.height === '99%') {
-				splitViewContent.style.height = "auto";
-				splitViewContent.style.width = "99%";
-				splitViewContent.style.right = "0";
-			} else {
-				splitViewContent.style.height = "99%";
-				splitViewContent.style.width = "auto";
-			}
-		}
-		if (type === 'action_close') {
-			splitViewContent.style.display = 'none';
-			localStorage.setItem('contentscript_open_chat', 'false');
-		}
-		if (type === 'action_options') {
-			openWindow(chrome.extension.getURL("/options.html"));
-		}
-	}
-
-	/* setup the icons */
-	var closeIcon = chrome.extension.getURL("/images/close.png");
-	var maxIcon = chrome.extension.getURL("/images/maximise.png");
-	var minIcon = chrome.extension.getURL("/images/minimise.png");
-
-	//var closeIconImage = document.getElementById("icon_close");
-	//closeIconImage.setAttribute('src', closeIcon);
-	//var maxIconImage = document.getElementById("icon_maximize");
-	//maxIconImage.setAttribute('src', maxIcon);
-	//var minIconImage = document.getElementById("icon_minimize");
-	//minIconImage.setAttribute('src', minIcon);
 
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	var disqus_shortname = 'dictum'; // required: replace example with your forum shortname
-	var disqus_identifier = str_replace('http://www.answersingenesis.org', '', document.URL);
-	var disqus_title = str_replace('http://www.answersingenesis.org', '', document.URL);
+	var disqus_identifier = document.URL;
+	var disqus_title = document.URL;
 	var disqus_url = document.URL;
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
@@ -109,41 +33,6 @@
 		dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 		(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
 	})();
-
-	function str_replace(search, replace, subject, count) {
-		var i = 0,
-				j = 0,
-				temp = '',
-				repl = '',
-				sl = 0,
-				fl = 0,
-				f = [].concat(search),
-				r = [].concat(replace),
-				s = subject,
-				ra = Object.prototype.toString.call(r) === '[object Array]',
-				sa = Object.prototype.toString.call(s) === '[object Array]';
-		s = [].concat(s);
-		if (count) {
-			this.window[count] = 0;
-		}
-
-		for (i = 0, sl = s.length; i < sl; i++) {
-			if (s[i] === '') {
-				continue;
-			}
-			for (j = 0, fl = f.length; j < fl; j++) {
-				temp = s[i] + '';
-				repl = ra ? (r[j] !== undefined ? r[j] : '') : r[0];
-				s[i] = (temp)
-						.split(f[j])
-						.join(repl);
-				if (count && s[i] !== temp) {
-					this.window[count] += (temp.length - s[i].length) / f[j].length;
-				}
-			}
-		}
-		return sa ? s : s[0];
-	}
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a>
 </noscript><a href="http://disqus.com" class="dsq-brlink">comments powered by
